changed map url, changed img paths, set attr for range

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 data-i18n="Select amount"></label>
                             <div class="position-relative pb-3 cfs-15">
                                 <input type="range" class="form-range" id="customRange" min="0" max="400000"
-                                    value="300000">
+                                    value="300000" step="10000">
                                 <span class="position-absolute bottom-0 start-0">0</span>
                                 <span class="position-absolute bottom-0 end-0">400,000</span>
                             </div>
@@ -366,7 +366,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car3.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car3 (2).png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -386,7 +386,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car4.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car4 (2).png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -406,7 +406,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car5.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car4 (3).png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -426,7 +426,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car6.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car6 (2).png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -456,9 +456,7 @@
                 <button class="green-button i18nelement border border-3 rounded-pill px-3 py-1"
                     data-i18n="Get money"></button>
                 <div class="pt-5">
-                    <iframe id="map"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2924.049431344285!2d74.5687248!3d42.871800799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec840893f7133%3A0xbee0a3bd82131b54!2z0YPQuy4g0JzQvtGB0LrQvtCy0YHQutCw0Y8gJiDRg9C7LiDQkNGB0LDQvdCw0LvQuNC10LLQsCwg0JHQuNGI0LrQtdC6!5e0!3m2!1sru!2skg!4v1696771516846!5m2!1sru!2skg"
-                        style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d576.0352227528862!2d74.56886297899604!3d42.871323971756674!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x389ec9e211b42055%3A0x3378d879ce55e669!2z0JDQudGC0YPRgCDQkdC40LfQvdC10Lcg0JHQvtGA0LHQvtGA0YM!5e0!3m2!1sru!2skg!4v1697044815972!5m2!1sru!2skg" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </div>
