--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car3 (2).png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car3_.png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -386,7 +386,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car4 (2).png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car4_.png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -406,7 +406,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car4 (3).png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car4_3.png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
@@ -426,7 +426,7 @@
                             </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car6 (2).png" alt="">
+                                    <img class="img-fluid w-100" src="./images/car6_.png" alt="">
                                 </div>
                                 <div class="col">
                                     <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 2000"></div>
