add lib for sending mail

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
     <script src="./simple_i18n/i18next.min.js"></script>
     <script src="./simple_i18n/i18n.js" type="text/javascript"></script>
+    <script src="./js/smtp.js"></script>
 </head>
 
 <body>
@@ -574,7 +575,7 @@
                                     data-i18n="I agree to the processing of personal data"></label>
                             </div>
                         </div>
-                        <button type="button" class="btn btn-secondary col-12 col-lg-10 border border-3 rounded-pill py-2">Close</button>
+                        <button type="button" class="btn btn-secondary col-12 col-lg-10 border border-3 rounded-pill py-2 i18nelement" data-i18n="Submit your application">Close</button>
                     </div>
                 </div>
             </div>
