--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                             data-i18n="Get money" data-bs-toggle="modal" data-bs-target="#myModal"></button>
                         <button
                             class="i18nelement col-12 col-lg-5 border border-3 ms-lg-2 rounded-pill py-1 my-1 blue-button"
-                            data-i18n="Submit your application" data-bs-toggle="modal" data-bs-target="#myModal"></button>
+                            data-i18n="Submit your application" data-bs-toggle="modal"
+                            data-bs-target="#myModal"></button>
                     </div>
                 </div>
                 <div class="col">
@@ -336,7 +337,7 @@
 
     <div class="block example-block odd-block text-white" id="example-block">
         <div class="container">
-            <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="1000">
+            <div id="carousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -345,22 +346,24 @@
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
                     <button type="button" data-bs-target="#carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
                 </div>
-                <div class="carousel-inner">
+                <div class="carousel-inner py-5">
+                    <div class="i18nelement fs-1 text-center fw-bold" data-i18n="Examples of issued loans">
+                    </div>
                     <div class="carousel-item active">
                         <div class="py-5">
-                            <div class="i18nelement fs-1 text-center fw-bold" data-i18n="Examples of issued loans">
-                            </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100 h-100" src="./images/car-carusel-1.png" style="max-height: 500px;" alt="...">
+                                    <img class="img-fluid w-100 h-100"
+                                        src="./images/carusel/photo_2023-10-14_23-31-57.jpg" style="max-height: 500px;"
+                                        alt="...">
                                 </div>
                                 <div class="col">
-                                    <div class="fs-2 fw-bold w-50">Toyota Camry VIII (XV70)</div>
+                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Toyota Camry 70 2019"></div>
                                     <div class="py-2">
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Given: 500 thousand soms without withdrawal"></div>
+                                            data-i18n="Toyota Camry 70 2019.issued"></div>
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Loan cost per month: 46,625 som"></div>
+                                            data-i18n="Toyota Camry 70 2019.price"></div>
                                     </div>
                                 </div>
                             </div>
@@ -368,19 +371,19 @@
                     </div>
                     <div class="carousel-item">
                         <div class="py-5">
-                            <div class="i18nelement fs-1 text-center fw-bold" data-i18n="Examples of issued loans">
-                            </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100 h-100" src="./images/car-carusel-2.png" style="max-height: 500px;" alt="">
+                                    <img class="img-fluid w-100 h-100"
+                                        src="./images/carusel/photo_2023-10-14_23-32-00.jpg" style="max-height: 500px;"
+                                        alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="fs-2 fw-bold w-50">Kia k5</div>
+                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Lexus GX 470 2005"></div>
                                     <div class="py-2">
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Given: 470 thousand soms without withdrawal"></div>
+                                            data-i18n="Lexus GX 470 2005.issued"></div>
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Loan cost per month: 43,827 som"></div>
+                                            data-i18n="Lexus GX 470 2005.price"></div>
                                     </div>
                                 </div>
                             </div>
@@ -388,19 +391,18 @@
                     </div>
                     <div class="carousel-item">
                         <div class="py-5">
-                            <div class="i18nelement fs-1 text-center fw-bold" data-i18n="Examples of issued loans">
-                            </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car-carusel-3.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/carusel/photo_2023-10-14_23-32-04.jpg"
+                                        alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="fs-2 fw-bold w-50 text-uppercase">honda civic 2006</div>
+                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Hyundai Sonata 2015"></div>
                                     <div class="py-2">
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Given: 500 thousand soms without withdrawal"></div>
+                                            data-i18n="Hyundai Sonata 2015.issued"></div>
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Loan cost per month: 50,645 som"></div>
+                                            data-i18n="Hyundai Sonata 2015.price"></div>
                                     </div>
                                 </div>
                             </div>
@@ -408,19 +410,18 @@
                     </div>
                     <div class="carousel-item">
                         <div class="py-5">
-                            <div class="i18nelement fs-1 text-center fw-bold" data-i18n="Examples of issued loans">
-                            </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car-carusel-4.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/carusel/photo_2023-10-14_23-32-06.jpg"
+                                        alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="fs-2 fw-bold w-50 text-uppercase">bmw x5</div>
+                                    <div class="i18nelement fs-2 fw-bold" data-i18n="Mercedes-Benz E-Class 2010"></div>
                                     <div class="py-2">
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Given: 500 thousand soms without withdrawal"></div>
+                                            data-i18n="Mercedes-Benz E-Class 2010.issued"></div>
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Loan cost per month: 50,645 som"></div>
+                                            data-i18n="Mercedes-Benz E-Class 2010.price"></div>
                                     </div>
                                 </div>
                             </div>
@@ -428,19 +429,18 @@
                     </div>
                     <div class="carousel-item">
                         <div class="py-5">
-                            <div class="i18nelement fs-1 text-center fw-bold" data-i18n="Examples of issued loans">
-                            </div>
                             <div class="row row-cols-1 row-cols-lg-2 justify-content-center align-items-center">
                                 <div class="col">
-                                    <img class="img-fluid w-100" src="./images/car-carusel-5.png" alt="">
+                                    <img class="img-fluid w-100" src="./images/carusel/photo_2023-10-14_23-32-10.jpg"
+                                        alt="">
                                 </div>
                                 <div class="col">
-                                    <div class="fs-2 fw-bold w-50">Audi A8</div>
+                                    <div class="i18nelement fs-2 fw-bold w-50" data-i18n="Honda CR-V 2010"></div>
                                     <div class="py-2">
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Given: 500 thousand soms without withdrawal"></div>
+                                            data-i18n="Honda CR-V 2010.issued"></div>
                                         <div class="i18nelement fs-5 fw-bold"
-                                            data-i18n="Loan cost per month: 50,645 som"></div>
+                                            data-i18n="Honda CR-V 2010.price"></div>
                                     </div>
                                 </div>
                             </div>
@@ -575,7 +575,9 @@
                                     data-i18n="I agree to the processing of personal data"></label>
                             </div>
                         </div>
-                        <button type="button" class="btn btn-secondary col-12 col-lg-10 border border-3 rounded-pill py-2 i18nelement" data-i18n="Submit your application">Close</button>
+                        <button type="button" id="submit-button"
+                            class="btn btn-secondary col-12 col-lg-10 border border-3 rounded-pill py-2 i18nelement"
+                            data-i18n="Submit your application" disabled>Close</button>
                     </div>
                 </div>
             </div>
